--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,5 @@ dash-html-components==2.0.0
 dash-table==5.0.0
 plotly==5.3.0
 pandas==1.3.4
-geopandas==0.10.2
 gunicorn==20.1.0
-shapely==1.8.1
-fiona==1.8.21
+flask-caching==2.0.2
