--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-dash==2.0.0
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-plotly==5.3.0
-pandas==1.3.4
-geopandas==0.10.2
-gunicorn==20.1.0
-shapely==1.8.1
-fiona==1.8.21
+dash==2.11.1
+plotly==5.18.0
+geopandas==0.14.1
+pandas==2.1.4
+numpy==1.26.3
+gunicorn==21.2.0
+pyproj==3.6.1
+shapely==2.0.2
